--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bytes = {version = "1.9.0", features = ["serde"] }
+num-traits = "0.2"
+num-derive = "0.4"
+mac_address= {version = "1.1.7"}
+
+[build-dependencies]
+cbindgen = {version = "0.27.0"}
+chrono = {version = "0.4.38", features=["now"]}
