--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ bytes = {version = "1.9.0", features = ["serde"] }
 num-traits = "0.2"
 num-derive = "0.4"
 mac_address= {version = "1.1.7"}
+log = {version = "0.4.22"}
 
 [build-dependencies]
 cbindgen = {version = "0.27.0"}
