--- a/clib/test/CMakeLists.txt
+++ b/clib/test/CMakeLists.txt
@@ -5,6 +5,9 @@ add_executable(test_buffer test_buffer.c)
 target_link_libraries(test_buffer ${BUILD_LIB_DEPS})
 add_test(NAME test_buffer COMMAND test_buffer)
 
+add_executable(test_vec test_vec.c)
+target_link_libraries(test_vec ${BUILD_LIB_DEPS})
+add_test(NAME test_vec COMMAND test_vec)
 
 add_executable(test_wire test_wire.c)
 target_link_libraries(test_wire ${BUILD_LIB_DEPS})
