--- a/clib/test/CMakeLists.txt
+++ b/clib/test/CMakeLists.txt
@@ -13,3 +13,6 @@ add_executable(test_wire test_wire.c object_builders.c)
 target_link_libraries(test_wire ${BUILD_LIB_DEPS})
 add_test(NAME test_wire COMMAND test_wire)
 
+add_executable(test_fmt_buff test_fmt_buff.c object_builders.c)
+target_link_libraries(test_fmt_buff ${BUILD_LIB_DEPS})
+add_test(NAME test_fmt_buff COMMAND test_fmt_buff)
