clib: add fmt_buff.h to main header

--- a/clib/src/CMakeLists.txt
+++ b/clib/src/CMakeLists.txt
@@ -21,7 +21,7 @@ target_compile_options(dplane-rpc PRIVATE ${BUILD_OPTS})
 target_include_directories(dplane-rpc PRIVATE "${PROJECT_BINARY_DIR}")
 
 set_target_properties(dplane-rpc PROPERTIES PUBLIC_HEADER
- "buffer.h;errors.h;display.h;dplane-rpc.h;dp_msg.h;dp_objects.h;dp_types.h;proto.h;vec.h;wire.h")
+ "buffer.h;errors.h;display.h;dplane-rpc.h;dp_msg.h;dp_objects.h;dp_types.h;proto.h;vec.h;fmt_buff.h;wire.h")
 
 install(TARGETS dplane-rpc LIBRARY DESTINATION /usr/local/lib
 	PUBLIC_HEADER DESTINATION /usr/include/dplane-rpc
