--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ tracing = { version = "0.1.40", default-features = false, features = ["attribute
 tracing-subscriber = { version = "0.3.18" }
 tracing-test = { version = "0.2.5" }
 
+[dev-dependencies]
+rand = "0.9.0"
 
 [build-dependencies]
 cbindgen = {version = "0.27.0"}
