--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
             uses: "actions/checkout@v4"
             with:
               persist-credentials: "false"
-              fetch-depth: "0"
+
           - name: "Check code changes"
             uses: "dorny/paths-filter@v3"
             id: "changes"
@@ -44,7 +44,9 @@ jobs:
 
         steps:
         - name: "Checkout repository"
-          uses: "actions/checkout@v2"
+          uses: "actions/checkout@v4"
+          with:
+            persist-credentials: "false"
 
         - name: "Install rust"
           uses: "dtolnay/rust-toolchain@master"
