--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "dplane-rpc"
 version = "1.0.0"
 edition = "2021"
+license = "Apache-2.0"
 
 [dependencies]
 bytes = {version = "1.9.0", features = ["serde"] }
