--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ log = {version = "0.4.22"}
 tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }
 tracing-subscriber = { version = "0.3.18" }
 tracing-test = { version = "0.2.5" }
+mio = { version = "1.0.3", features = ["os-ext", "net"] }
 
 [dev-dependencies]
 rand = "0.9.0"
