--- a/clib/src/CMakeLists.txt
+++ b/clib/src/CMakeLists.txt
@@ -5,7 +5,6 @@ set(LIB_SRC
     wire.c
 	dp_objects.c
 	dp_msg.c
-	vec.c
 	display.c
 	fmt_buff.c
 )
@@ -21,7 +20,7 @@ target_compile_options(dplane-rpc PRIVATE ${BUILD_OPTS})
 target_include_directories(dplane-rpc PRIVATE "${PROJECT_BINARY_DIR}")
 
 set_target_properties(dplane-rpc PROPERTIES PUBLIC_HEADER
- "buffer.h;errors.h;display.h;dplane-rpc.h;dp_msg.h;dp_objects.h;dp_types.h;proto.h;vec.h;fmt_buff.h;wire.h")
+ "buffer.h;errors.h;display.h;dplane-rpc.h;dp_msg.h;dp_objects.h;dp_types.h;proto.h;fmt_buff.h;wire.h")
 
 install(TARGETS dplane-rpc LIBRARY DESTINATION /usr/local/lib
 	PUBLIC_HEADER DESTINATION /usr/include/dplane-rpc
